fixed button alignment issue

--- a/style.css
+++ b/style.css
@@ -83,19 +83,21 @@ span{
  }
 
  .options {
+    position: relative;
     display: flex;
     justify-content: center;
+    align-items: center;
     font-size: 4rem;
     gap: 2rem;
  }
- .options div {
+ .options .option {
+    display:flex;
+    align-items: center;
     background:rgb(255, 104, 240) ;
     width: 120px;
     height: 120px;
     padding: 2rem 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+   
     border-radius: 0.5rem;
     cursor: pointer;
  }
